...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Comments-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" userLabel="Comments" customClass="CommentsViewController" customModule="Circus_Imgs" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="P57-bt-9ha" id="Qzu-Ph-KVT"/>
                            <outlet property="delegate" destination="P57-bt-9ha" id="X4p-XA-pV8"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Saved Images" id="FPt-Hy-6gh" userLabel="Favourite"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="bO8-mU-blW" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1612" y="-550"/>
        </scene>
        <!--Fav Img Detail View Controller-->
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="hSz-lw-Tzu" id="Wrw-15-D9e"/>
                            <outlet property="delegate" destination="hSz-lw-Tzu" id="xBN-9f-VKX"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Circus" id="yt8-zJ-3rk"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="EJQ-XM-uyz" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1565.5999999999999" y="-1379.4602698650676"/>
        </scene>
        <!--Image Detail View-->
...
            </objects>
            <point key="canvasLocation" x="2717.5999999999999" y="-1305.697151424288"/>
        </scene>
        <!--Search-->
        <scene sceneID="g8l-ui-eCK">
            <objects>
                <tableViewController id="6AQ-65-Zx0" userLabel="Search" customClass="SearchTableViewController" customModule="Circus_Imgs" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="rch-Ne-b3p">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="searches" id="qvd-re-tha">
...
            <point key="canvasLocation" x="-374" y="-483"/>
        </scene>
        <!--Circus-->
        <scene sceneID="4FS-tz-yTx">
            <objects>
                <navigationController title="Circus" automaticallyAdjustsScrollViewInsets="NO" id="Jib-fk-Lfh" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="ic_home" id="yrV-1p-e2L" userLabel="Home"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Y1I-32-3MA">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <color key="barTintColor" red="0.0" green="0.6588235294" blue="0.5450980392" alpha="1" colorSpace="calibratedRGB"/>
...
